--- a/monydown.Rmd
+++ b/monydown.Rmd
@@ -70,6 +70,35 @@ But what is a fair price when the company employed, CSFB, to assess the fair val
 
 # Question 2: What options are available to AXA to finance the takeover of MONY? Why has AXA chose to use ORANs?
 
+When MONY announced that it accepted AXA’s offer for the acquisition on the 17th of September 2003, it was also revealed that AXA was going to pay 31 dollars per share on 47 million shares for a total of 1.5 billion dollars. To raise the funds necessary for MONY’s acquisition AXA had to choose between a few financing strategies namely: issue debt, swap stocks or raise equity. The following section will evaluate the different options that AXA had and explain why AXA chose to raise the necessary acquisition funds though the ORAN.   
+
+### Stock-for-stock
+
+The first acquisition strategy proposed by AXA was the Stock-for-Stock acquisition. In Stock-for-stock deal, the shareholders of the acquired company would receive newly issued shares of the buying company as compensation for their equity. This proposal was rejected by MONY’s board since they believed that it could potentially create extreme fluctuation in the stock price up until the point of acquisition. According to the board this potential outcome might have gone against the current shareholders. This stance could be debated in several ways.  
+
+ 
+
+On one hand, this fear could be justified if they believed that the acquisition would be great value increase for AXA because the two companies would be fit well together given that they are similar in many ways and complementary in others. For instance, MONY was well spread in important locations where business was expected to grow or stronger in wholesale distribution. The same held true for the product range as well. Above all, the otherwise unattainable increase in the U.S. sales force by 25% might have been driving AXA’s share price up.  
+ 
+
+On the other hand, such increases could be negated (or even overturned) by the fact that MONY could not report good profit figures in the previous years, and hence leading to a decrease of AXA’s share price. Also, share prices of the buying company generally have been observed to go down in the short run because they pay a premium for the acquisition, whereas the shares of the acquired company move into the other direction. 
+
+This case is exceptional, however, since all indications lead to the belief that MONY's shares were *undervalued* and that AXA were buying them at a discount, not at a premium (even at \$31). By this logic, it would be actually favorable for AXA to pursue a stock-for-stock exchange and it is not yet clear to us why AXA did not opt for this option. One of the possible explanations might be the questionable nature of the whole deal, in terms of MONY's management being overly eager to accept a potentially unfavorable deal. In the light of this of opaque and likely fraudulent decision, AXA might have known they are getting "free money" for sure and decided to leverage it out further by the use of ORANs, which are contigent, meaning they carry some risk for the outsiders, but not for AXA who knew they would get the deal.
+
+### Debt funding
+
+The second option, which is not directly mentioned in the case but is often used in acquisitions, is the use of debt to raise the necessary funds. This option also seemed viable, given the relatively stable and low D/E ratios of both MONY and AXA provided in the table below. (L/E is not a sensible metric with insurance companies, as their business model revolves around accpeting insurance premiums which are liabilites).
+
+Even if AXA raise the extra \$1.5B neccesary for the acquistion, their D/E after the aqcuisition would have increased only slightly to 0.77. What is necessary to consider, however, are the regulatory capital requirements imposed on financial companies, which would require AXA to raise new equity after the debt issue, in order to meet those requirements, despite the D/E itself is quite low. In such scenario, debt funding would not be the best option since it would lead to unnecessary shares dillution and extra capital on the balance sheet.
+
+TABLE OF THE D/E
+
+### ORANs
+The last funding option available to AXA was the issuance of equity to pay MONY’s shareholders in cash. Although this method was chosen, AXA did not carry it out using a standard equity issuance but through ORAN which is a contingent convertible debt.  Despite the ORAN being relatively more complicated than a simple equity issuance, they gave AXA valuable flexibility. For every of the circa 1’700 million outstanding shares, current AXA’s shareholders would receive one warrant. A number of warrants could then be exchanged for one ORAN at a face value of 12.75 Euros. The ORANs were in essence convertible debt which, in case of successful acquisition, could be converted into one newly issued stock at 12.75 euros.  
+
+The clear advantage of convertible debt compared to normal equity is that in case the acquisition wouldn’t occur the debt would be simply redeemed by the company and therefore no equity would be issued. In practice, ORANs gave AXA the option but not the obligation to issue equity which was quite desirable given AXA’s financial position and the overall trends in the market at the time. As a matter of fact, compared to their competitors in the insurance industry, AXA was not undercapitalised and therefore didn’t need un-necessary extra capital.  
+
+These considerations bring us to the conclusion that ORAN, despite being redeemed at a discount with respect to the past\ AXA’s share price, offered several advantages compared to the other possible financing options.  
 
 
 # Question 3: How are ORANs price and what information do they communicate together with AXA's share price?
@@ -77,7 +106,11 @@ But what is a fair price when the company employed, CSFB, to assess the fair val
 
 # Question 4: Why are MONY shares trading above AXA's offer prince, in the absence of any competing bid and with no apparent indication that AXA may raise its offer?
 
+On the 17th of September 2003, in response to the board’s announcement of its acceptance of AXA’s offer for 31USD a share MONY’s share gained 12.85% in one trading day. This does not represent a big surprise for us since the empirical research tells us that that the company which is being taken over usually has significant strong positive performance in reaction to the announcement. Not only the share price rose after that date but also the trading volume did so and remained high in the following period. 
 
+What’s particular of the MONY deal was that the incumbent shareholders could sell their shares with voting rights for a premium. For this reason, there were less and less incumbent owners that were willing to sell their shares at the market price. The new market equilibrium that was created from the announcement of the deal maintained MONY’s share price above the price offered by the French insurance giant throughout all the time that elapsed from the announcement to the actual acquisition.  
+
+The key factor that contributed to such a high share price was that some big players, like Deutsche Bank, were speculating on the deal. They did this by playing on both sides on the deal. On the one side of the trade they owned the ORANs while on other side they were buying MONY’s voting shares from the incumbent shareholders in order to secure the vote in favor of the takeover. Securing the vote and allowing the takeover of MONY from AXA allowed them to knock in the warrant from the ORAN and get one AXA share that now was worth substantially more. The shares of AXA were valued at 16.32 euros while the price of one ORAN was 12.75 euros.  
 
 
 # Conclusion
